# static_format

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: try_build_test.rs
tests/ui/: basic.rs  invalid_arg.rs  invalid_arg.stderr  missing_arg.rs  missing_arg.stderr  missing_args.rs  missing_args.stderr  too_many_args.rs  too_many_args.stderr
