[package]
name = "static_format"
version = "0.0.1"
authors = ["Omena Inc. <info@omena.ai>", "Clelland Green III"]
description = "Format strings with no runtime overhead."
keywords = ["format", "no-std"]
license = "MIT"
categories = ["no-std", "no-std::no-alloc", "text-processing"]
edition = "2018"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.48"

[dev-dependencies]
trybuild = "1.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs", "-Z", "unstable-options"]
cargo-args = ["-Z", "build-std"]