[package]
name = "static_format"
version = "0.0.3"
authors = ["Omena Inc. <info@omena.ai>", "Clelland Green III"]
description = "Format strings with no runtime overhead."
keywords = ["format", "no-std", "const_format", "const-format", "const"]
license = "MIT"
categories = ["no-std", "no-std::no-alloc", "text-processing"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Omena-Palette/static_format"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.48"

[dev-dependencies]
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]